# encrypted-zone-ratified-isolates

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .rustfmt.toml  .versionrc.json  CHANGELOG.md  README.md  buf.yaml  devkit.json  isolate_package.bzl
.agents/rules/: use_devkit.md
.devkit/: CHANGELOG.md
.devkit/images/: dev-env.Dockerfile  vscode-ide.Dockerfile
.devkit/scripts/: docker_run.py  entrypoint_docker  test_docker_run.py
.devkit/scripts/docker/: build.py  test_build.py
.sdk-v1/: .pre-commit-config.yaml  CHANGELOG.md
.sdk-v1/core/cpp/src/: ez_isolate_bridge_server.cpp  ez_isolate_bridge_server.h  isolate_ez_bridge_client.cpp  isolate_ez_bridge_client.h
.sdk-v1/core/cpp/test/: ez_isolate_bridge_server_test.cc  mock_isolate_ez_bridge_client.h  mock_isolate_rpc_service.h
.sdk-v1/tools/plugin/tmpl/: hpp_client_reader_writer.tmpl  rs_isolate_rpc_service.tmpl  rs_isolate_stub.tmpl
crypto_oracle/: .bazelrc  BUILD.bazel  GEMINI.md  MODULE.bazel  WORKSPACE.bazel  buf.yaml  grpc_python_versions.patch  isolate_package.bzl  main.rs
crypto_oracle/enforcer/v1/: BUILD.bazel  data_scope_type.proto  ez_data_scope.proto  ez_external_proxy_service.proto  ez_isolate_bridge.proto  ez_payload.proto  ez_service.proto  isolate_bridge.proto  isolate_data_scope.proto  isolate_ez_bridge.proto  isolate_health.proto  isolate_state.proto  options.proto  status.proto
crypto_oracle/oracle/: BUILD.bazel  crypto_oracle.proto
crypto_oracle/src/: crypto_oracle.rs  data_scope_utils.rs  key_info.rs  status.rs
crypto_oracle/test/: oracle_test.rs
crypto_oracle/toolchains/: BUILD.bazel
crypto_oracle/v1/: BUILD.bazel  crypto_oracle.proto
sdk/: BUILD.bazel  MODULE.bazel  WORKSPACE
sdk/core/rust/: BUILD.bazel
sdk/core/rust/src/: otel.rs  rpc_dispatcher.rs  rpc_handler.rs  utils.rs
sdk/core/rust/test/: isolate_client_test.rs  isolate_server_test.rs  test_utils.rs  utils_test.rs
sdk/enforcer/v1/: BUILD.bazel  ez_isolate_bridge.proto  ez_payload.proto  ez_shm_payload.proto  isolate_ez_bridge.proto
sdk/patches/: BUILD.bazel  boring-sys-cmake.patch
sdk/toolchains/: BUILD.bazel
sdk/tools/plugin/: BUILD.bazel  ez_sdk.py
sdk/tools/plugin/tmpl/: client_reader_writer.h.jinja2  grpc.pb.h.jinja2  isolate_rpc_service.rs.jinja2  isolate_stub.rs.jinja2  lib.rs.jinja2  server_reader_writer.h.jinja2
shared_lib/: MODULE.bazel
shared_lib/grpc_connector/: BUILD.bazel
shared_lib/grpc_connector/src/: util.rs
shared_lib/grpc_connector/test/: test_service.proto  util_test.rs
shared_lib/traces/: BUILD.bazel
shared_lib/traces/src/: lib.rs
shared_lib/traces/test/: console_subscriber_conflict_test.rs  console_subscriber_test.rs  traces_test.rs  traces_uds_test.rs
tls_session_manager/: .bazelrc  BUILD.bazel  MODULE.bazel  buf.yaml  main.rs
tls_session_manager/patches/: BUILD.bazel  grpc_python_versions.patch
tls_session_manager/src/: tls_session_manager.rs
tls_session_manager/test/: tls_session_manager_test.rs
tls_session_manager/v1/: BUILD.bazel  tls_session_manager.proto
trusted_aratea_traffic/: .bazelrc  BUILD.bazel  MODULE.bazel  WORKSPACE  grpc_python_versions.patch  main.rs  private_inference_service.proto
trusted_aratea_traffic/src/: lib.rs  trusted_aratea_traffic.rs
trusted_aratea_traffic/tests/: trusted_aratea_traffic_test.rs
trusted_aratea_traffic/toolchains/: BUILD.bazel
