# Copyright 2025 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library", "rust_test")
load(":isolate_package.bzl", "isolate_package")

exports_files([
    ".rustfmt.toml",
    "buf.yaml",
])

rust_library(
    name = "data_scope_utils",
    srcs = ["src/data_scope_utils.rs"],
    visibility = ["//visibility:public"],
    deps = [
        "@privacy-sandbox-ez-sdk//enforcer/v1:data_scope_rust",
        "@privacy-sandbox-ez-sdk//enforcer/v1:payload_rust",
    ],
)

rust_library(
    name = "crypto_oracle_key_info",
    srcs = ["src/key_info.rs"],
    visibility = ["//visibility:public"],
    deps = [
        "@oracle_crates//:debug-ignore",
        "@oracle_crates//:tink-core",
        "@privacy-sandbox-ez-sdk//enforcer/v1:data_scope_rust",
    ],
)

rust_library(
    name = "crypto_oracle_status",
    srcs = ["src/status.rs"],
    visibility = ["//visibility:public"],
    deps = [
        "@crates//:tonic",
        "@oracle_crates//:tink-core",
    ],
)

rust_library(
    name = "crypto_oracle",
    srcs = ["src/crypto_oracle.rs"],
    visibility = ["//visibility:public"],
    deps = [
        ":crypto_oracle_key_info",
        ":crypto_oracle_status",
        ":data_scope_utils",
        "//v1:crypto_oracle_rust",
        "//v1:crypto_oracle_service",
        "@crates//:dashmap",
        "@crates//:log",
        "@crates//:tokio",
        "@crates//:tonic",
        "@crates//:tracing",
        "@oracle_crates//:tink-core",
        "@oracle_crates//:tink-proto",
        "@oracle_crates//:tink-signature",
        "@privacy-sandbox-ez-sdk//enforcer/v1:data_scope_rust",
    ],
)

rust_test(
    name = "crypto_oracle_tests",
    size = "small",
    srcs = glob(["test/*.rs"]),
    visibility = ["//visibility:public"],
    deps = [
        ":crypto_oracle",
        ":crypto_oracle_status",
        ":data_scope_utils",
        "//v1:crypto_oracle_rust",
        "//v1:crypto_oracle_service",
        "@crates//:tokio",
        "@crates//:tonic",
        "@oracle_crates//:tink-core",
        "@oracle_crates//:tink-signature",
        "@privacy-sandbox-ez-sdk//enforcer/v1:data_scope_rust",
    ],
)

rust_binary(
    name = "crypto_oracle_isolate",
    srcs = ["main.rs"],
    visibility = ["//visibility:public"],
    deps = [
        ":crypto_oracle",
        "//v1:crypto_oracle_rust",
        "//v1:crypto_oracle_service",
        "@crates//:log",
        "@crates//:tokio",
        "@oracle_crates//:clap",
        "@oracle_crates//:env_logger",
        "@shared_lib//traces",
    ],
)

isolate_package(
    base_name = "crypto_oracle",
    binary = ":crypto_oracle_isolate",
)

genrule(
    name = "collect-test-logs",
    outs = ["collect_test_logs.bin"],
    cmd_bash = """cat << EOF > '$@'
tools/collect-test-logs "\\$$@"
EOF""",
    executable = True,
    local = True,
    message = "copy bazel test logs",
)
