# Copyright 2026 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

workspace(name = "encrypted-zone-crypto-oracle")

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# Oak repository for OCI oci_runtime_bundle.
# Sadly Oak is not Bzlmod ready yet.
# 2025-10-17
http_archive(
    name = "oak",
    sha256 = "d9070f59da16a6ca9f4b6d6319d5eae5e849d8a0f5dd2347902f52dc05aa38ae",
    strip_prefix = "oak-af56ea2a8c1808dbd61352bdd49d31e49c55b12c",
    url = "https://github.com/project-oak/oak/archive/af56ea2a8c1808dbd61352bdd49d31e49c55b12c.tar.gz",
)

load("@oak//bazel:repositories.bzl", "oak_toolchain_repositories")

oak_toolchain_repositories()
