# Copyright 2026 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library", "rust_test")
load(":isolate_package.bzl", "isolate_package")

exports_files([
    ".rustfmt.toml",
    "buf.yaml",
])

rust_library(
    name = "tls_session_manager",
    srcs = ["src/tls_session_manager.rs"],
    deps = [
        "//v1:tls_session_manager_rust",
        "//v1:tls_session_manager_service",
        "@crates//:log",
        "@crates//:tokio",
        "@crates//:tokio-stream",
        "@crates//:tonic",
        "@oak_crates_index//:anyhow",
    ],
)

rust_test(
    name = "tls_session_manager_test",
    size = "small",
    srcs = ["test/tls_session_manager_test.rs"],
    deps = [
        ":tls_session_manager",
        "//v1:tls_session_manager_rust",
        "//v1:tls_session_manager_service",
        "@crates//:tokio",
        "@crates//:tokio-stream",
        "@crates//:tonic",
        "@oak_crates_index//:anyhow",
    ],
)

rust_binary(
    name = "tls_session_manager_isolate",
    srcs = ["main.rs"],
    deps = [
        ":tls_session_manager",
        "//v1:tls_session_manager_service",
        "@crates//:log",
        "@crates//:tokio",
        "@tsm_crates//:clap",
        "@tsm_crates//:env_logger",
    ],
)

isolate_package(
    base_name = "tls_session_manager",
    binary = ":tls_session_manager_isolate",
)
