# Copyright 2026 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

module(
    name = "trusted-aratea-traffic",
    version = "1.0.0",
)

# SDK from submodule
bazel_dep(name = "privacy-sandbox-ez-sdk", version = "0.0.0")
local_path_override(
    module_name = "privacy-sandbox-ez-sdk",
    path = "../sdk",
)

bazel_dep(name = "aspect_bazel_lib", version = "2.20.0")
bazel_dep(name = "bazel_skylib", version = "1.8.1")
bazel_dep(name = "gazelle", version = "0.37.0")
bazel_dep(name = "googleapis", version = "0.0.0-20240819-fe8ba054a", repo_name = "com_google_googleapis")
bazel_dep(name = "grpc", version = "1.78.0")
bazel_dep(name = "protobuf", version = "29.3", repo_name = "com_google_protobuf")
bazel_dep(name = "rules_buf", version = "0.5.2")
bazel_dep(name = "rules_oci", version = "2.0.1")
bazel_dep(name = "rules_pkg", version = "1.0.1")
bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "rules_proto_grpc", version = "5.6.0")
bazel_dep(name = "rules_python", version = "1.9.0")
bazel_dep(name = "rules_rust", version = "0.61.0")
bazel_dep(name = "rules_rust_prost", version = "0.61.0")
bazel_dep(name = "toolchains_protoc", version = "0.4.3")
bazel_dep(name = "toolchains_llvm", version = "1.4.0")

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "confidential-federated-compute",
    build_file_content = """
filegroup(
  name = "sysroot",
  srcs = glob(["*/**"]),
  visibility = ["//visibility:public"],
)
""",
    sha256 = "f58c289b3ccb28895ad8ca408ac366e709037088e8b5c28aca18212adc18c31e",
    urls = ["https://github.com/google-parfait/confidential-federated-compute/releases/download/sysroot-20250618/sysroot.tar.xz"],
)

llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")
llvm.toolchain(
    name = "cpp_toolchain",
    llvm_version = "20.1.0",
)
llvm.sysroot(
    name = "cpp_toolchain",
    label = "@confidential-federated-compute//:sysroot",
    targets = ["linux-x86_64"],
)
use_repo(llvm, "cpp_toolchain")

register_toolchains("@cpp_toolchain//:all")

# Configure Rust toolchain
rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2021",
    versions = ["1.85.0"],
)
use_repo(rust, "rust_toolchains")

register_toolchains("@rust_toolchains//:all")

# Protoc toolchain
protoc = use_extension("@toolchains_protoc//protoc:extensions.bzl", "protoc")
protoc.toolchain(
    google_protobuf = "com_google_protobuf",
    version = "v29.3",
)

# Crate dependencies
crate = use_extension("@rules_rust//crate_universe:extension.bzl", "crate")
crate.spec(
    features = ["derive"],
    package = "clap",
    version = "4.5",
)
crate.spec(
    package = "env_logger",
    version = "0.11.3",
)
crate.spec(
    package = "log",
    version = "0.4.22",
)
crate.from_specs(name = "trusted_aratea_traffic_crates")
use_repo(crate, "crates", "trusted_aratea_traffic_crates")

# Python needed for protobuf build steps
python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    ignore_root_user_error = True,
    python_version = "3.13",
)

pip2 = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip2.parse(
    hub_name = "sdk-pypi",
    python_version = "3.13",
    requirements_lock = "@privacy-sandbox-ez-sdk//tools/plugin:requirements_lock.txt",
)
use_repo(pip2, "sdk-pypi")

single_version_override(
    module_name = "grpc",
    patches = ["//:grpc_python_versions.patch"],
    version = "1.78.0",
)

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
use_repo(oci, "isolate_runtime_ubuntu_base")
