# Copyright 2025 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@com_google_protobuf//bazel:proto_library.bzl", "proto_library")
load("@privacy-sandbox-ez-sdk//tools/plugin:ez_sdk.bzl", "ez_isolate_service_rs")
load("@rules_rust_prost//:defs.bzl", "rust_prost_library")

proto_library(
    name = "crypto_oracle_proto",
    srcs = ["crypto_oracle.proto"],
    import_prefix = "crypto_oracle/",
    visibility = ["//visibility:public"],
    deps = [
        "//enforcer/v1:data_scope_proto",
        "//enforcer/v1:payload_proto",
        "//enforcer/v1:status_proto",
    ],
)

rust_prost_library(
    name = "crypto_oracle_rust",
    proto = ":crypto_oracle_proto",
    visibility = ["//visibility:public"],
)

ez_isolate_service_rs(
    name = "crypto_oracle_service",
    crate_name = "crypto_oracle_sdk",
    proto_basename = "crypto_oracle",
    protos = [":crypto_oracle_proto"],
    rust_protos = [":crypto_oracle_rust"],
    visibility = ["//visibility:public"],
)
