# Copyright 2025 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@com_google_protobuf//bazel:proto_library.bzl", "proto_library")
load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")
load("@rules_rust_prost//:defs.bzl", "rust_prost_library")

rust_library(
    name = "grpc_connector",
    srcs = ["src/util.rs"],
    visibility = ["//visibility:public"],
    deps = [
        "@crates//:anyhow",
        "@crates//:boring",
        "@crates//:hyper-util",
        "@crates//:log",
        "@crates//:tokio",
        "@crates//:tokio-boring",
        "@crates//:tokio-retry",
        "@crates//:tonic",
        "@crates//:tower",
    ],
)

rust_test(
    name = "grpc_connector_util_test",
    size = "small",
    srcs = ["test/util_test.rs"],
    tags = ["test"],
    deps = [
        ":grpc_connector",
        ":grpc_connector_test_rust",
        "@crates//:boring",
        "@crates//:tempfile",
        "@crates//:tokio",
        "@crates//:tokio-stream",
        "@crates//:tonic",
        "@crates//:tower",
    ],
)

proto_library(
    name = "grpc_connector_test_proto",
    srcs = ["test/test_service.proto"],
    visibility = ["//visibility:public"],
)

rust_prost_library(
    name = "grpc_connector_test_rust",
    proto = ":grpc_connector_test_proto",
    visibility = ["//visibility:public"],
)
