# Copyright 2026 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@com_google_protobuf//bazel:proto_library.bzl", "proto_library")
load("@privacy-sandbox-ez-sdk//tools/plugin:ez_sdk.bzl", "ez_isolate_service_rs")
load("@rules_buf//buf:defs.bzl", "buf_lint_test")
load("@rules_rust_prost//:defs.bzl", "rust_prost_library")

proto_library(
    name = "tls_session_manager_proto",
    srcs = ["tls_session_manager.proto"],
    import_prefix = "tls_session_manager/",
    visibility = ["//visibility:public"],
)

buf_lint_test(
    name = "tsm_lint",
    size = "small",
    config = "//:buf.yaml",
    targets = [":tls_session_manager_proto"],
)

rust_prost_library(
    name = "tls_session_manager_rust",
    proto = ":tls_session_manager_proto",
    visibility = ["//visibility:public"],
)

ez_isolate_service_rs(
    name = "tls_session_manager_service",
    crate_name = "tls_session_manager_sdk",
    proto_basename = "tls_session_manager",
    protos = [":tls_session_manager_proto"],
    rust_protos = [":tls_session_manager_rust"],
    visibility = ["//visibility:public"],
)
